--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
     "amd": true
   },
   "rules": {
+    "complexity": 0,
     "linebreak-style": 0,
     "max-len": [2, {"code": 120, "tabWidth": 4, "ignoreStrings": true, "ignoreComments": true, "ignoreRegExpLiterals": true, "ignoreTemplateLiterals": true}],
     "no-sync": 0,
