功能支持 -latex公式 -mermaid -脚注

--- a/bower.json
+++ b/bower.json
@@ -53,7 +53,8 @@
     "tui-color-picker": "^2.2.0",
     "squire-rte": "sohee-lee7/Squire#fde64d0bedb524e4495f3121dce518b94ad5852b",
     "plantuml-encoder": "^1.2.5",
-    "tui-chart": "^2.13.0"
+    "tui-chart": "^2.13.0",
+    "katex": "^0.10.0"
   },
   "resolutions": {
     "tui-code-snippet": "^1.2.9"
