--- a/package.json
+++ b/package.json
@@ -86,7 +86,10 @@
     "codemirror": "^5.33.0",
     "highlight.js": "^9.12.0",
     "jquery": "^3.3.1",
+    "katex": "^0.10.0",
     "markdown-it": "^8.4.0",
+    "markdown-it-footnote": "^3.0.1",
+    "mermaid": "^8.0.0",
     "plantuml-encoder": "^1.2.5",
     "resize-observer-polyfill": "^1.5.0",
     "squire-rte": "github:sohee-lee7/Squire#fde64d0bedb524e4495f3121dce518b94ad5852b",
