--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
   },
   "dependencies": {
     "codemirror": "^5.33.0",
+    "flowchart.js": "^1.11.3",
     "highlight.js": "^9.12.0",
     "jquery": "^3.3.1",
     "katex": "^0.10.0",
