--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "flowchart.js": "^1.11.3",
     "highlight.js": "^9.12.0",
     "jquery": "^3.3.1",
+    "js-sequence-diagrams": "git+https://github.com/LiangCY/js-sequence-diagrams.git",
     "katex": "^0.10.0",
     "markdown-it": "^8.4.0",
     "markdown-it-footnote": "^3.0.1",
